[gd_scene load_steps=40 format=2]

[ext_resource path="res://Sprites/Enemies/Citizen/idle.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Citizen.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Enemies/Citizen/panting.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemies/Citizen/crawl.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemies/Citizen/running.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemies/Citizen/crawling.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemies/Citizen/cling.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Enemies/Citizen/up.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Enemies/Citizen/down.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Particles/fire.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 10 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 10 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 10 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 26 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 22, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 22, 0, 22, 24 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 44, 0, 22, 24 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 66, 0, 22, 24 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 88, 0, 22, 24 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 110, 0, 22, 24 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 6, 21 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 7, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 7, 0, 7, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 14, 0, 7, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 21, 0, 7, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 18, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 36, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 54, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 72, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 90, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 18, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 36, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 54, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 72, 0, 18, 22 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 90, 0, 18, 22 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "crawl",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "crawling",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "panting",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "run_lookback",
"speed": 8.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "slide",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "slide2",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[node name="Citizen" type="KinematicBody2D"]
collision_layer = 24
collision_mask = 6
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Fire" type="AnimatedSprite" parent="."]
position = Vector2( 0, -5 )
frames = SubResource( 27 )
playing = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 29 )
animation = "run_lookback"

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 13 )
collision_mask = 6

[node name="PlayerFinder" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 13 )
collision_mask = 3

[node name="AimRay" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 13 )
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( 1, 10 )
cast_to = Vector2( 0, 0 )
collision_mask = 6

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -350, -196 )
rect = Rect2( 0, 0, 700, 400 )
process_parent = true
physics_process_parent = true

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 3.0
default_color = Color( 0.968627, 0, 1, 0.239216 )

[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
